grid gap fixes

--- a/style.scss
+++ b/style.scss
@@ -20,10 +20,6 @@ body{
   height: 100vh;
 }
 
-h1 {
-  padding-top: 20px;
-}
-
 #drum-machine {
   width: 800px;
   height: 540px;
@@ -35,6 +31,9 @@ h1 {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  h1 {
+    padding-top: 20px;
+  }
 }
 
 #functional-components{
@@ -131,8 +130,12 @@ h1 {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      #pad-panel {
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+      }
       #control-panel{
-        margin-top: 15px;
+        margin-top: 30px;
         display: grid;
         grid-template-columns: 40vw 40vw;
         grid-template-rows: 60px 60px;
@@ -142,7 +145,7 @@ h1 {
         "display buttons"
         "volume speed";
         #display {
-          height: 50px;
+          height: 40px;
           grid-area: display;
         }
         #volume-bar {
